--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <type>pom</type>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
